Database migration switched to liquibase

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ MYSQL_ROOT_PASSWORD=admin
 MYSQL_DATABASE=cookbook
 MYSQL_USER=application
 MYSQL_PASSWORD=userpwd
+
+# Liquibase
+MYSQL_CONNECTOR_VERSION=8.0.28
